--- a/example-smart-app/health.html
+++ b/example-smart-app/health.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <img src="./src/images/batman.gif" alt="Batman">
+    <img src="./src/images/penguins.png" alt="Malkin">    
     <p>Go Penguins!!!</p>
   </body>
 </html>
