--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -3,6 +3,10 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="pragma" content="no-cache" />    
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="pragma" content="no-cache" />    
     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
     <title>Example-SMART-App</title>
   </head>
