--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -15,7 +15,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '88e153cb-7458-49e0-9b86-663c3c93b526',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'user/Patient.read user/MedicationStatement.read user/MedicationStatement.write'
       });
     </script>
     <div class="spinner">
