--- a/source/example-smart-app/index.html
+++ b/source/example-smart-app/index.html
@@ -1,2 +1,34 @@
-<!DOCTYPE html><html>  <head>    <meta http-equiv='X-UA-Compatible' content='IE=edge' />    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />    <meta http-equiv="cache-control" content="max-age=0" />    <meta http-equiv="cache-control" content="no-cache" />    <meta http-equiv="expires" content="0" />    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />    <meta http-equiv="pragma" content="no-cache" />    <title>Example-SMART-App</title>
-    <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>  </head>  <body>    <h2>Example-SMART-App</h2>    <div id='errors'>    </div>    <div id="loading">Loading...</div>    <script src='./lib/fhir-client.js'></script>    <script>      function ready(smart) {        var patient = smart.api.read({type: 'Patient', id: '711924'}).then(function(response) {         document.body.innerText = JSON.stringify(response);        });       }      function notReady() {        if (window.location.href.indexOf('error') < 0) {          document.body.innerText = "Launch first.";        }      }      FHIR.oauth2.ready(ready, notReady);    </script>  </body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
+    <title>Example-SMART-App</title>
+    
+     <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
+    </head>
+  <body>
+    <h2>Example-SMART-App</h2>
+    <div id='errors'>    </div>
+    <div id="loading">Loading...</div>
+    <script src='./lib/fhir-client.js'></script>
+    <script>
+      function ready(smart) {        
+        var patient = smart.api.read({type: 'Patient', id: '711924'}).then(function(response) {
+          document.body.innerText = JSON.stringify(response);
+        });
+      }      
+      function notReady() {        
+        if (window.location.href.indexOf('error') < 0) {
+          document.body.innerText = "Launch first.";
+        }
+      }
+      FHIR.oauth2.ready(ready, notReady);
+    </script>
+  </body>
+</html>
